Fixed runtime, virtual thread feature enabled by environment variable.